--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="skills.html">Skills</a></li>
-                <li><a href="snippets.html">Blog</a></li>
+                <li><a href="snippets.html">Code Snippets</a></li>
                 <li><a href="connect.html">Contact</a></li>
             </ul>
             <button class="mobile-menu" aria-label="Toggle navigation">
